cleanup the tree a little